--- a/sandbox/pymongo.ipynb
+++ b/sandbox/pymongo.ipynb
@@ -42,7 +42,7 @@
     {
      "data": {
       "text/plain": [
-       "['account']"
+       "['entry', 'account', 'transaction']"
       ]
      },
      "execution_count": 4,
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
        "Collection(Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True), 'foo'), 'account')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "dict"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,18 +105,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('67c61fa19d0161a19b80469e'),\n",
-       " 'name': 'equity',\n",
-       " 'group': 'equity'}"
+       "{'_id': ObjectId('67c9da19a31bd39961888ff3'),\n",
+       " 'name': 'income:yoyodyne',\n",
+       " 'group': 'income'}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
