Organize tests in a class, add fixtures.

--- a/sandbox/DB.ipynb
+++ b/sandbox/DB.ipynb
@@ -122,7 +122,7 @@
     {
      "data": {
       "text/plain": [
-       "[<Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, '...(remaining elements truncated)...']"
+       "[<Account: Account object>]"
       ]
      },
      "execution_count": 5,
@@ -171,7 +171,7 @@
     {
      "data": {
       "text/plain": [
-       "'income:yoyodyne'"
+       "'equity'"
       ]
      },
      "execution_count": 8,
@@ -207,7 +207,7 @@
     {
      "data": {
       "text/plain": [
-       "MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True, read_preference=Primary(), uuidrepresentation=3, driver=DriverInfo(name='MongoEngine', version='0.29.1', platform=None))"
+       "MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True, read_preference=Primary(), uuidrepresentation=4, driver=DriverInfo(name='MongoEngine', version='0.29.1', platform=None))"
       ]
      },
      "execution_count": 9,
@@ -227,7 +227,7 @@
     {
      "data": {
       "text/plain": [
-       "Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True, read_preference=Primary(), uuidrepresentation=3, driver=DriverInfo(name='MongoEngine', version='0.29.1', platform=None)), 'foo')"
+       "Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True, read_preference=Primary(), uuidrepresentation=4, driver=DriverInfo(name='MongoEngine', version='0.29.1', platform=None)), 'foo')"
       ]
      },
      "execution_count": 10,
@@ -256,7 +256,7 @@
     {
      "data": {
       "text/plain": [
-       "Collection(Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True, read_preference=Primary(), uuidrepresentation=3, driver=DriverInfo(name='MongoEngine', version='0.29.1', platform=None)), 'foo'), 'account')"
+       "Collection(Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True, read_preference=Primary(), uuidrepresentation=4, driver=DriverInfo(name='MongoEngine', version='0.29.1', platform=None)), 'foo'), 'account')"
       ]
      },
      "execution_count": 12,
@@ -276,9 +276,9 @@
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('67c7b37fd9090d36e9ef8ad5'),\n",
-       " 'name': 'income:yoyodyne',\n",
-       " 'group': 'income'}"
+       "{'_id': ObjectId('67ca0417b64ec7443ae9a2d8'),\n",
+       " 'name': 'equity',\n",
+       " 'group': 'equity'}"
       ]
      },
      "execution_count": 13,
@@ -455,7 +455,7 @@
     {
      "data": {
       "text/plain": [
-       "1000"
+       "1000.0"
       ]
      },
      "execution_count": 21,
@@ -526,16 +526,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Collection(Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True, read_preference=Primary(), uuidrepresentation=3, driver=DriverInfo(name='MongoEngine', version='0.29.1', platform=None)), 'foo'), 'stats')"
+       "Collection(Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True, read_preference=Primary(), uuidrepresentation=4, driver=DriverInfo(name='MongoEngine', version='0.29.1', platform=None)), 'foo'), 'stats')"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,16 +546,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<bound method Collection.find_one of Collection(Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True, read_preference=Primary(), uuidrepresentation=3, driver=DriverInfo(name='MongoEngine', version='0.29.1', platform=None)), 'foo'), 'stats')>"
+       "<bound method Collection.find_one of Collection(Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True, read_preference=Primary(), uuidrepresentation=4, driver=DriverInfo(name='MongoEngine', version='0.29.1', platform=None)), 'foo'), 'stats')>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,16 +566,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['entry', 'account', 'transaction']"
+       "['account']"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,22 +586,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'n': 7, 'ok': 1.0}"
+       "{'n': 1, 'ok': 1.0}"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "db.command('count','account')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'isWritablePrimary': True,\n",
+       " 'topologyVersion': {'processId': ObjectId('67c4fbece8eb6b0fbfe3b917'),\n",
+       "  'counter': 0},\n",
+       " 'maxBsonObjectSize': 16777216,\n",
+       " 'maxMessageSizeBytes': 48000000,\n",
+       " 'maxWriteBatchSize': 100000,\n",
+       " 'localTime': datetime.datetime(2025, 3, 6, 20, 27, 1, 115000),\n",
+       " 'logicalSessionTimeoutMinutes': 30,\n",
+       " 'connectionId': 294,\n",
+       " 'minWireVersion': 0,\n",
+       " 'maxWireVersion': 25,\n",
+       " 'readOnly': False,\n",
+       " 'ok': 1.0}"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.command('hello')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'system': {'currentTime': datetime.datetime(2025, 3, 6, 20, 28, 42, 332000),\n",
+       "  'hostname': 'cthulhu.local',\n",
+       "  'cpuAddrSize': 64,\n",
+       "  'memSizeMB': 65536,\n",
+       "  'memLimitMB': 65536,\n",
+       "  'numCores': 12,\n",
+       "  'numCoresAvailableToProcess': 12,\n",
+       "  'numPhysicalCores': 12,\n",
+       "  'numCpuSockets': 1,\n",
+       "  'cpuArch': 'arm64',\n",
+       "  'numaEnabled': False,\n",
+       "  'numNumaNodes': 1},\n",
+       " 'os': {'type': 'Darwin', 'name': 'Mac OS X', 'version': '24.3.0'},\n",
+       " 'extra': {'versionString': 'Darwin Kernel Version 24.3.0: Thu Jan  2 20:24:23 PST 2025; root:xnu-11215.81.4~3/RELEASE_ARM64_T6020',\n",
+       "  'alwaysFullSync': 0,\n",
+       "  'nfsAsync': 0,\n",
+       "  'model': 'Mac14,13',\n",
+       "  'cpuString': 'Apple M2 Max',\n",
+       "  'pageSize': 16384,\n",
+       "  'scheduler': 'edge'},\n",
+       " 'ok': 1.0}"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.command('hostInfo')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ok': 1.0}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.command('ping')"
    ]
   },
   {
