Add computed attributes to Transaction, update unit tests

--- a/sandbox/DB.ipynb
+++ b/sandbox/DB.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DB.open('foo')"
+    "DB.open('pytest')"
    ]
   },
   {
@@ -122,7 +122,7 @@
     {
      "data": {
       "text/plain": [
-       "[<Account: Account object>]"
+       "[<Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, '...(remaining elements truncated)...']"
       ]
      },
      "execution_count": 5,
@@ -227,7 +227,7 @@
     {
      "data": {
       "text/plain": [
-       "Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True, read_preference=Primary(), uuidrepresentation=4, driver=DriverInfo(name='MongoEngine', version='0.29.1', platform=None)), 'foo')"
+       "Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True, read_preference=Primary(), uuidrepresentation=4, driver=DriverInfo(name='MongoEngine', version='0.29.1', platform=None)), 'pytest')"
       ]
      },
      "execution_count": 10,
@@ -256,7 +256,7 @@
     {
      "data": {
       "text/plain": [
-       "Collection(Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True, read_preference=Primary(), uuidrepresentation=4, driver=DriverInfo(name='MongoEngine', version='0.29.1', platform=None)), 'foo'), 'account')"
+       "Collection(Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True, read_preference=Primary(), uuidrepresentation=4, driver=DriverInfo(name='MongoEngine', version='0.29.1', platform=None)), 'pytest'), 'account')"
       ]
      },
      "execution_count": 12,
@@ -276,7 +276,7 @@
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('67ca0417b64ec7443ae9a2d8'),\n",
+       "{'_id': ObjectId('67ca0be50d3684a66634c33f'),\n",
        " 'name': 'equity',\n",
        " 'group': 'equity'}"
       ]
@@ -532,7 +532,7 @@
     {
      "data": {
       "text/plain": [
-       "Collection(Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True, read_preference=Primary(), uuidrepresentation=4, driver=DriverInfo(name='MongoEngine', version='0.29.1', platform=None)), 'foo'), 'stats')"
+       "Collection(Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True, read_preference=Primary(), uuidrepresentation=4, driver=DriverInfo(name='MongoEngine', version='0.29.1', platform=None)), 'pytest'), 'stats')"
       ]
      },
      "execution_count": 24,
@@ -546,16 +546,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<bound method Collection.find_one of Collection(Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True, read_preference=Primary(), uuidrepresentation=4, driver=DriverInfo(name='MongoEngine', version='0.29.1', platform=None)), 'foo'), 'stats')>"
+       "<bound method Collection.find_one of Collection(Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True, read_preference=Primary(), uuidrepresentation=4, driver=DriverInfo(name='MongoEngine', version='0.29.1', platform=None)), 'pytest'), 'stats')>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,16 +566,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['account']"
+       "['entry', 'account', 'transaction']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,16 +586,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'n': 1, 'ok': 1.0}"
+       "{'n': 22, 'ok': 1.0}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -618,16 +618,16 @@
        " 'maxBsonObjectSize': 16777216,\n",
        " 'maxMessageSizeBytes': 48000000,\n",
        " 'maxWriteBatchSize': 100000,\n",
-       " 'localTime': datetime.datetime(2025, 3, 6, 20, 27, 1, 115000),\n",
+       " 'localTime': datetime.datetime(2025, 3, 6, 23, 41, 44, 502000),\n",
        " 'logicalSessionTimeoutMinutes': 30,\n",
-       " 'connectionId': 294,\n",
+       " 'connectionId': 370,\n",
        " 'minWireVersion': 0,\n",
        " 'maxWireVersion': 25,\n",
        " 'readOnly': False,\n",
        " 'ok': 1.0}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,13 +638,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'system': {'currentTime': datetime.datetime(2025, 3, 6, 20, 28, 42, 332000),\n",
+       "{'system': {'currentTime': datetime.datetime(2025, 3, 6, 23, 41, 44, 506000),\n",
        "  'hostname': 'cthulhu.local',\n",
        "  'cpuAddrSize': 64,\n",
        "  'memSizeMB': 65536,\n",
@@ -667,7 +667,7 @@
        " 'ok': 1.0}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -687,13 +687,177 @@
        "{'ok': 1.0}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "db.command('ping')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fetch Transactions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Specify constraints on transactions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<Transaction: Transaction object>, <Transaction: Transaction object>, <Transaction: Transaction object>, <Transaction: Transaction object>, <Transaction: Transaction object>, <Transaction: Transaction object>, <Transaction: Transaction object>, <Transaction: Transaction object>, <Transaction: Transaction object>, <Transaction: Transaction object>, <Transaction: Transaction object>, <Transaction: Transaction object>, <Transaction: Transaction object>, <Transaction: Transaction object>, <Transaction: Transaction object>, <Transaction: Transaction object>]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Transaction.objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<Transaction: Transaction object>, <Transaction: Transaction object>, <Transaction: Transaction object>, <Transaction: Transaction object>]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Transaction.objects(description='Safeway')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-01-07 expenses:groceries 75.0 EntryType.dr\n",
+      "2024-01-07 assets:checking 75.0 EntryType.cr\n",
+      "2024-01-21 expenses:groceries 175.0 EntryType.dr\n",
+      "2024-01-21 liabilities:visa 175.0 EntryType.cr\n",
+      "2024-02-07 expenses:groceries 75.0 EntryType.dr\n",
+      "2024-02-07 assets:checking 75.0 EntryType.cr\n",
+      "2024-02-21 expenses:groceries 75.0 EntryType.dr\n",
+      "2024-02-21 liabilities:visa 75.0 EntryType.cr\n"
+     ]
+    }
+   ],
+   "source": [
+    "for t in Transaction.objects(description='Safeway'):\n",
+    "    for e in t.entries:\n",
+    "        print(e.date, e.account, e.amount, e.etype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'expenses:groceries', 'assets:checking'}\n",
+      "{'expenses:groceries', 'liabilities:visa'}\n",
+      "{'expenses:groceries', 'assets:checking'}\n",
+      "{'expenses:groceries', 'liabilities:visa'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for t in Transaction.objects(description='Safeway'):\n",
+    "    print(t.accounts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "75.0\n",
+      "175.0\n",
+      "75.0\n",
+      "75.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for t in Transaction.objects(description='Safeway'):\n",
+    "    print(t.amount)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-01-07 <class 'datetime.date'>\n",
+      "2024-01-21 <class 'datetime.date'>\n",
+      "2024-02-07 <class 'datetime.date'>\n",
+      "2024-02-21 <class 'datetime.date'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for t in Transaction.objects(description='Safeway'):\n",
+    "    print(t.date, type(t.date))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/\n",
+      "big party this weekend/\n",
+      "/\n",
+      "/\n"
+     ]
+    }
+   ],
+   "source": [
+    "for t in Transaction.objects(description='Safeway'):\n",
+    "    print(t.originals)"
    ]
   },
   {
