--- a/sandbox/DB.ipynb
+++ b/sandbox/DB.ipynb
@@ -122,7 +122,7 @@
     {
      "data": {
       "text/plain": [
-       "[<Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, '...(remaining elements truncated)...']"
+       "[<Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>]"
       ]
      },
      "execution_count": 5,
@@ -276,7 +276,7 @@
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('67ca0be50d3684a66634c33f'),\n",
+       "{'_id': ObjectId('67cb8a1503f02a51e5a4f2d5'),\n",
        " 'name': 'equity',\n",
        " 'group': 'equity'}"
       ]
@@ -592,7 +592,7 @@
     {
      "data": {
       "text/plain": [
-       "{'n': 22, 'ok': 1.0}"
+       "{'n': 17, 'ok': 1.0}"
       ]
      },
      "execution_count": 27,
@@ -618,9 +618,9 @@
        " 'maxBsonObjectSize': 16777216,\n",
        " 'maxMessageSizeBytes': 48000000,\n",
        " 'maxWriteBatchSize': 100000,\n",
-       " 'localTime': datetime.datetime(2025, 3, 6, 23, 41, 44, 502000),\n",
+       " 'localTime': datetime.datetime(2025, 3, 10, 17, 41, 52, 135000),\n",
        " 'logicalSessionTimeoutMinutes': 30,\n",
-       " 'connectionId': 370,\n",
+       " 'connectionId': 435,\n",
        " 'minWireVersion': 0,\n",
        " 'maxWireVersion': 25,\n",
        " 'readOnly': False,\n",
@@ -644,7 +644,7 @@
     {
      "data": {
       "text/plain": [
-       "{'system': {'currentTime': datetime.datetime(2025, 3, 6, 23, 41, 44, 506000),\n",
+       "{'system': {'currentTime': datetime.datetime(2025, 3, 10, 17, 41, 52, 139000),\n",
        "  'hostname': 'cthulhu.local',\n",
        "  'cpuAddrSize': 64,\n",
        "  'memSizeMB': 65536,\n",
@@ -786,9 +786,9 @@
      "output_type": "stream",
      "text": [
       "{'expenses:groceries', 'assets:checking'}\n",
-      "{'expenses:groceries', 'liabilities:visa'}\n",
+      "{'liabilities:visa', 'expenses:groceries'}\n",
       "{'expenses:groceries', 'assets:checking'}\n",
-      "{'expenses:groceries', 'liabilities:visa'}\n"
+      "{'liabilities:visa', 'expenses:groceries'}\n"
      ]
     }
    ],
@@ -858,6 +858,372 @@
    "source": [
     "for t in Transaction.objects(description='Safeway'):\n",
     "    print(t.originals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lst = list(Transaction.objects(description='Safeway'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"_id\": {\"$oid\": \"67cb8a1503f02a51e5a4f30e\"}, \"description\": \"Safeway\", \"comment\": \"weekly groceries\", \"tags\": [], \"entries\": [{\"$oid\": \"67cb8a1503f02a51e5a4f2f8\"}, {\"$oid\": \"67cb8a1503f02a51e5a4f2f9\"}]}'"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst[0].to_json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lst[1].comment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Operators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-01-02 paycheck\n",
+      "2024-01-02 fill buckets\n",
+      "2024-02-02 paycheck\n",
+      "2024-02-02 fill buckets\n",
+      "2024-01-05 car payment\n",
+      "2024-02-05 car payment\n",
+      "2024-01-10 Shell Oil\n",
+      "2024-02-26 Shell Oil\n",
+      "2024-01-07 Safeway\n",
+      "2024-01-21 Safeway\n",
+      "2024-02-07 Safeway\n",
+      "2024-02-21 Safeway\n"
+     ]
+    }
+   ],
+   "source": [
+    "for t in Transaction.objects(description__gte='Safeway'):\n",
+    "    print(t.date, t.description)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-01-10 Shell Oil\n",
+      "2024-02-26 Shell Oil\n",
+      "2024-01-07 Safeway\n",
+      "2024-01-21 Safeway\n",
+      "2024-02-07 Safeway\n",
+      "2024-02-21 Safeway\n"
+     ]
+    }
+   ],
+   "source": [
+    "for t in Transaction.objects(description__regex='^S'):\n",
+    "    print(t.date, t.description)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The operator automatically applies to list elements."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-01-02 fill buckets 5000.0\n",
+      "2024-02-02 fill buckets 5000.0\n",
+      "2024-01-05 car payment 500.0\n",
+      "2024-02-05 car payment 500.0\n",
+      "2024-01-10 Shell Oil 50.0\n",
+      "2024-02-26 Shell Oil 60.0\n",
+      "2024-01-04 Rocket Mortgage 1800.0\n",
+      "2024-02-04 Rocket Mortgage 1800.0\n",
+      "2024-03-10 Home Depot 50.0\n",
+      "2024-03-12 Home Depot 25.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for t in Transaction.objects(description__regex=r'\\s'):\n",
+    "    print(t.date, t.description, t.amount)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For compound constraints we need another class from MongoEngine."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mongoengine.queryset.visitor import Q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-01-10 Shell Oil\n",
+      "2024-02-26 Shell Oil\n",
+      "2024-01-07 Safeway\n",
+      "2024-01-21 Safeway\n",
+      "2024-02-07 Safeway\n",
+      "2024-02-21 Safeway\n"
+     ]
+    }
+   ],
+   "source": [
+    "for t in Transaction.objects(Q(description__regex=r'^S')):\n",
+    "    print(t.date, t.description)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-01-10 Shell Oil\n",
+      "2024-02-26 Shell Oil\n"
+     ]
+    }
+   ],
+   "source": [
+    "for t in Transaction.objects(Q(description__regex=r'^S') & Q(description__regex=r'\\s')):\n",
+    "    print(t.date, t.description)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### QuerySet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "liabilities:visa\n",
+      "expenses:groceries\n",
+      "expenses:mortgage\n",
+      "expenses:car\n",
+      "expenses:travel\n"
+     ]
+    }
+   ],
+   "source": [
+    "for a in Account.nominal_accounts:\n",
+    "    print(a.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "assets:checking\n"
+     ]
+    }
+   ],
+   "source": [
+    "for a in Account.objects.expense_accounts('assets'):\n",
+    "    print(a.name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "expenses:groceries\n",
+      "expenses:mortgage\n",
+      "expenses:car\n",
+      "expenses:travel\n"
+     ]
+    }
+   ],
+   "source": [
+    "for a in Account.objects.expense_accounts('expenses'):\n",
+    "    print(a.name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Combining Query Elements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q = Q(description__regex=r'^S')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Q(**{'description__regex': '^S'})"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mongoengine.queryset.visitor.Q"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = Q(description__regex=r'\\s')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(Q(**{'description__regex': '\\\\s'}) & Q(**{'description__regex': '^S'}))"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p & q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-01-10 Shell Oil\n",
+      "2024-02-26 Shell Oil\n"
+     ]
+    }
+   ],
+   "source": [
+    "for t in Transaction.objects(p & q):\n",
+    "    print(t.date, t.description)"
    ]
   },
   {
